Adição do Rodapé

--- a/TDE_DW1_02-2020/formularios.html
+++ b/TDE_DW1_02-2020/formularios.html
@@ -75,27 +75,27 @@
                     <div class="form-group">
                         <label for="rotas">Selecione sua rota</label>
                         <select class="custom-select" required>
-              <option selected>Rotas</option>
-              <option value="1">Topo</option>
-              <option value="2">Selva</option>
-              <option value="3">Meio</option>
-              <option value="4">Atirador</option>
-              <option value="5">Suporte</option>
-            </select>
+                            <option selected>Rotas</option>
+                            <option value="1">Topo</option>
+                            <option value="2">Selva</option>
+                            <option value="3">Meio</option>
+                            <option value="4">Atirador</option>
+                            <option value="5">Suporte</option>
+                        </select>
                     </div>
 
                     <div class="form-group">
                         <label for="rotas">Selecione seu elo</label>
                         <select class="custom-select" required>
-              <option selected>Elos</option>
-              <option value="1">Ferro</option>
-              <option value="2">Bronze - Prata</option>
-              <option value="3">Ouro</option>
-              <option value="4">Platina</option>
-              <option value="5">Diamante</option>
-              <option value="6">Mestre</option>
-              <option value="7">Grão-Mestre - Desafiante</option>
-            </select>
+                            <option selected>Elos</option>
+                            <option value="1">Ferro</option>
+                            <option value="2">Bronze - Prata</option>
+                            <option value="3">Ouro</option>
+                            <option value="4">Platina</option>
+                            <option value="5">Diamante</option>
+                            <option value="6">Mestre</option>
+                            <option value="7">Grão-Mestre - Desafiante</option>
+                        </select>
                     </div>
 
                     <br>
@@ -114,7 +114,8 @@
                                 <br>
                                 <input type="radio" name="modalidade" value="modalidade-3"><label>&nbspARAM</label>
                                 <br>
-                                <input type="radio" name="modalidade" value="modalidade-4"><label>&nbspSR Classic</label>
+                                <input type="radio" name="modalidade" value="modalidade-4"><label>&nbspSR
+                                    Classic</label>
                             </div>
                         </div>
                         <br>
@@ -124,19 +125,40 @@
                         </div>
                         <div class="form-group">
                             <input type="checkbox" name="Acordo" required>
-                            <label>Você aceita as regras e todos os termos desse campeonato e está ciente dos risco, dito no
-                            <a href="termos.html">Termos</a>?</label>
+                            <label>Você aceita as regras e todos os termos desse campeonato e está ciente dos risco,
+                                dito no
+                                <a href="termos.html">Termos</a>?</label>
                         </div>
 
                         <div class="form-group ">
-                            <button id="confirmacao" type="input " class="btn btn-primary" onlick="alert('Olá invocador obrigado pro se inscrever');"><i class="far fa-check-circle "></i> Cadastrar</button>
+                            <button id="confirmacao" type="input " class="btn btn-primary" onlick="alert('Olá invocador obrigado pro se inscrever');"><i
+                                    class="far fa-check-circle "></i> Cadastrar</button>
                             <button type="reset " class="btn btn-danger "> Limpar</button>
                         </div>
                 </form>
                 </div>
             </div>
         </div>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <!--Rodape-->
+        <footer id="rodape">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2">
+                        <h4>campeonato</h4>
+                        <ul class="nav">
+
+                        </ul>
+                        <li><a href="https://www.riotgames.com/pt-br">Riot Games</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="contato.html">Contatos</a></li>
+                        <li>
+                            <a href="formularios.html">Increva-se</a>
+                        </li>
+                        </ul>
+                    </div>
+                </div>
+        </footer>
+        <!-- jQuery (necessary for Bootstrap 's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js "></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="bootstrap/js/bootstrap.min.js "></script>
