--- a/TDE_DW1_02-2020/contato.html
+++ b/TDE_DW1_02-2020/contato.html
@@ -1,43 +1,65 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel="stylesheet" type="text/css" href="css/estilo.css">
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Marco Silva, Leonardo negrão">
-  <meta name="description" content="O site foi criado com o intuito educacional, refere-se ao trabalho da disciplina de desenvolvimento WEB do curso de sistema da informação">
-  <meta name="keywords" content="site, web, SI">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-  <title>HOME</title>
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Marco Silva, Leonardo negrão">
+    <meta name="description" content="O site foi criado com o intuito educacional, refere-se ao trabalho da disciplina de desenvolvimento WEB do curso de sistema da informação">
+    <meta name="keywords" content="site, web, SI">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <title>HOME</title>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
- <!-- Ícones feitos por <a href="http://www.dariusdan.com/" title="Darius Dan">Darius Dan</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"> www.flaticon.com</a>
+    <!-- Ícones feitos por <a href="http://www.dariusdan.com/" title="Darius Dan">Darius Dan</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"> www.flaticon.com</a>
  -->
 </head>
-	<body>
-        <header>
-            <div class="inner-width">
-              <i class="menu-toggle-btn fas fa-bars"></i>
-              <nav class="navigation-menu">
-              <a href="index.html"><i class="fas fa-home home"></i>Home</a>
-              <a href="formularios.html"><i class="fas fa-align-left about"></i>Registrar-se</a>
-              <a href="contato.html"><i class="fas fa-headset contact"></i> Contato</a>
-              </nav>
-            </div>
-            </header>
-		<div class="sn">
-		<a href="Facebook" formaction="https://www.facebook.com/profile.php?id=100005149501736"id=azao><i class="fab fa-facebook-f"></i></a>
-		<a href="#"id=azao><i class="fab fa-twitter"></i></a>
-		<a href="instagram" formaction="https://instagram.com/isabella0018?igshid=122gp52v455ar"id=azao><i class="fab fa-instagram"></i></a>
-		<a href="https://api.whatsapp.com/send?phone=5517996599875&text=Me%20mande%20uma%20mensagem%20e%20eu%20vejo%20se%20%C3%A9%20digno%20do%20numero%20dela"id=azao><i class="fab fa-whatsapp"></i></a>
-		</div>
 
-	</body>
+<body>
+    <header>
+        <div class="inner-width">
+            <i class="menu-toggle-btn fas fa-bars"></i>
+            <nav class="navigation-menu">
+                <a href="index.html"><i class="fas fa-home home"></i>Home</a>
+                <a href="formularios.html"><i class="fas fa-align-left about"></i>Registrar-se</a>
+                <a href="contato.html"><i class="fas fa-headset contact"></i> Contato</a>
+            </nav>
+        </div>
+    </header>
+    <div class="sn">
+        <a href="Facebook" formaction="https://www.facebook.com/profile.php?id=100005149501736" id=azao><i class="fab fa-facebook-f"></i></a>
+        <a href="#" id=azao><i class="fab fa-twitter"></i></a>
+        <a href="instagram" formaction="https://instagram.com/isabella0018?igshid=122gp52v455ar" id=azao><i class="fab fa-instagram"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=5517996599875&text=Me%20mande%20uma%20mensagem%20e%20eu%20vejo%20se%20%C3%A9%20digno%20do%20numero%20dela" id=azao><i class="fab fa-whatsapp"></i></a>
+    </div>
+    <!--Rodape-->
+    <footer id="rodape">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2">
+                    <h4>campeonato</h4>
+                    <ul class="nav">
+
+                    </ul>
+                    <li><a href="https://www.riotgames.com/pt-br">Riot Games</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="contato.html">Contatos</a></li>
+                    <li>
+                        <a href="formularios.html">Increva-se</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+    </footer>
+
+</body>
+
 </html>
