--- a/TDE_DW1_02-2020/index.html
+++ b/TDE_DW1_02-2020/index.html
@@ -49,9 +49,20 @@
     <footer id="rodape">
         <div class="container">
             <div class="row">
+                <div class="col-md-2">
+                    <h4>campeonato</h4>
+                    <ul class="nav">
 
+                    </ul>
+                    <li><a href="https://www.riotgames.com/pt-br">Riot Games</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="contato.html">Contatos</a></li>
+                    <li>
+                        <a href="formularios.html">Increva-se</a>
+                    </li>
+                    </ul>
+                </div>
             </div>
-        </div>
     </footer>
 
 
