Realizou-se a correção do rodape da página formulários,html

--- a/TDE_DW1_02-2020/contato.html
+++ b/TDE_DW1_02-2020/contato.html
@@ -35,10 +35,10 @@
         </div>
     </header>
     <div class="sn">
-        <a href="Facebook" formaction="https://www.facebook.com/profile.php?id=100005149501736" id=azao><i class="fab fa-facebook-f"></i></a>
+        <a href="Facebook" formaction="https://www.facebook.com" id=azao><i class="fab fa-facebook-f"></i></a>
         <a href="#" id=azao><i class="fab fa-twitter"></i></a>
-        <a href="instagram" formaction="https://instagram.com/isabella0018?igshid=122gp52v455ar" id=azao><i class="fab fa-instagram"></i></a>
-        <a href="https://api.whatsapp.com/send?phone=5517996599875&text=Me%20mande%20uma%20mensagem%20e%20eu%20vejo%20se%20%C3%A9%20digno%20do%20numero%20dela" id=azao><i class="fab fa-whatsapp"></i></a>
+        <a href="instagram" formaction="https://instagram.com" id=azao><i class="fab fa-instagram"></i></a>
+        <a href="https://web.whatsapp.com.br" id=azao><i class="fab fa-whatsapp"></i></a>
     </div>
     <!--Rodape-->
     <footer id="rodape">
